# ABDEep

./: .eslintrc.json  .gitignore  AGENTS.md  CMakeLists.txt  DSP_SIGNAL_FLOW.md  TEST_PLAN.md  build.bat  build_tests.bat  crash_fx_by_name.txt  crash_fx_only.txt  crash_test_stdout.txt  deepmind_patchwork_investigation.md  dsp_gap_analysis.md  mcp_deepmind_installation.md  package-lock.json  package.json  roadmap.md  start.bat  test_abd.txt  test_full.txt  test_output.txt  test_output2.txt  test_run_report.txt  vitest.config.js
.github/workflows/: audio-ab-ci.yml  dsp-ci.yml  webui-ci.yml
Presets/: Bass_HPF_Boost_Pattern.txt
Source/: BridgeActions.cpp  BridgeActions.h  FXUnitTestsRunner.cpp  MidiTranslationEngine.h  ParametersSpec.cpp  ParametersSpec.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h
Source/Calibration/: AudioABComparator.cpp  AudioABComparator.h  AudioABRecorder.cpp  AudioABRecorder.h  AudioABVerdictEngine.cpp  AudioABVerdictEngine.h
Source/Core/: CalibrationSpec.cpp  CalibrationSpec.h  DiagnosticSnapshots.h  ParametersSpec.cpp  PatchDiffTypes.h  RoundTripValidator.cpp  RoundTripValidator.h
Source/DSP/: DSPHelpers.h  DriftEngine.cpp  DriftEngine.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  JunoHPF.h  JunoVCF_ZDF.cpp  JunoVCF_ZDF.h  LFO.cpp  LFO.h  ModulationMatrix.cpp  ModulationMatrix.h  OSC1.cpp  OSC1.h  OSC2.cpp  OSC2.h  Oscillator.cpp  Oscillator.h  SynthEngine.cpp  SynthEngine.h  SynthEngineUnitTests.cpp  SynthVoice.cpp  SynthVoice.h  VcfVoicing.h
Source/DSP/FX/: FXAutoPan.cpp  FXAutoPan.h  FXBase.h  FXChorus.cpp  FXChorus.h  FXChorusD.cpp  FXChorusD.h  FXDecimDelay.cpp  FXDecimDelay.h  FXDelay.cpp  FXDelay.h  FXEdison.cpp  FXEdison.h  FXEngine.cpp  FXEngine.h  FXEnhancer.cpp  FXEnhancer.h  FXFairComp.cpp  FXFairComp.h  FXFlanger.cpp  FXFlanger.h  FXHybridReverb.cpp  FXHybridReverb.h  FXMidasEQ.cpp  FXMidasEQ.h  FXModDelayRev.cpp  FXModDelayRev.h  FXMoodFilter.cpp  FXMoodFilter.h  FXMultiBandDist.cpp  FXMultiBandDist.h  FXMultiTapDelay.cpp  FXMultiTapDelay.h  FXNoiseGate.cpp  (+18 more)
Source/Plugin/: BridgeActions.cpp  BridgeActions.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
WebUI/: index.html  style.css
WebUI/css/: base.css  browser.css  buttons.css  calibration_lab.css  colors.css  controls.css  debug-panel.css  keyboard.css  manager.css  modals.css  modmatrix.css  navbar.css  panel_edit.css  performance.css  programmer.css  sysex_monitor.css  utilities.css  vars.css
WebUI/js/: _fix_fade.js  arpeggiator.js  bank_sampler.js  bridge-dual.js  bridge-engines.js  bridge-midi-learn.js  bridge-param-maps.js  browser.js  browser_io.js  browser_mapper.js  browser_packer.js  browser_persistence.js  byte-map.js  calibration_lab_page.js  calibration_patch_picker.js  calibration_report_exporter.js  calibration_store.js  edit_actions.js  edit_cache_mapper.js  edit_history.js  edit_persistence.js  effects.js  effects_presets.js  effects_templates.js  factory_fx_presets.js  factory_seq_presets.js  keyboard.js  keyboard_active_notes.js  keyboard_chord_memory.js  keyboard_poly_chord.js  knobs.js  modmatrix.js  panel_controls_arp_seq_mod.js  panel_controls_binder.js  panel_controls_env_voice.js  panel_controls_lfo_vca.js  panel_controls_osc_vcf.js  panel_edit.js  panel_graphics.js  panel_oscilloscope.js  (+18 more)
WebUI/resources/: parameters_spec.json
WebUI/schemas/: audio-ab-comparison.schema.v2.0.0.json  audio-ab-manifest.schema.v1.0.0.json  calibration-manifest.schema.v1.0.0.json  calibration-run.schema.v1.0.0.json
WebUI/scripts/: export-calibration-run.js
WebUI/tests/: arpeggiatorCore.test.js  audioABControls.test.js  audioABSchema.contract.test.js  bankSampler.test.js  barGenerators.test.js  bridgeDual.test.js  bridgeDualCore.test.js  bridgeEngines.test.js  bridgeMidiLearn.test.js  bridgeParamMaps.test.js  browserCore.test.js  browserIo.test.js  browserMapper.test.js  browserPacker.test.js  browserPersistence.test.js  byteMap.test.js  calibrationReportExporter.test.js  calibrationSchema.contract.test.js  calibrationStore.test.js  editActions.test.js  editCacheMapper.test.js  editHistory.test.js  editPersistence.test.js  effects.test.js  effectsPresets.test.js  effectsTemplates.test.js  exportCalibrationRun.test.js  factoryFxPresets.test.js  factorySeqPresets.test.js  globalSettings.test.js  keyboardActiveNotes.test.js  keyboardChordMemory.test.js  keyboardCore.test.js  keyboardPolyChord.test.js  knobs.test.js  lcdSafeUpdate.test.js  lfoSliders.test.js  modalComponents.test.js  modalTests.test.js  modmatrix.test.js  (+28 more)
build_tests/: ABDEep.slnx  ABDEep.vcxproj  ABDEep.vcxproj.filters  ABDEepCalibrationLab.vcxproj  ABDEepCalibrationLab.vcxproj.filters  ABDEepCalibrationLab_rc_lib.vcxproj  ABDEepCalibrationLab_rc_lib.vcxproj.filters  ABDEep_All.vcxproj  ABDEep_All.vcxproj.filters  ABDEep_Standalone.vcxproj  ABDEep_UnitTests.vcxproj  ABDEep_UnitTests.vcxproj.filters  ABDEep_UnitTests_rc_lib.vcxproj  ABDEep_UnitTests_rc_lib.vcxproj.filters  ABDEep_VST3.vcxproj  ABDEep_VST3.vcxproj.filters  ABDEep_rc_lib.vcxproj  ABDEep_rc_lib.vcxproj.filters  ABDEep_vst3_helper.vcxproj  ABDEep_vst3_helper.vcxproj.filters  ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  abdeep_core.vcxproj  abdeep_core.vcxproj.filters  cmake_install.cmake
build_tests/_juce/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  JUCE.slnx  JUCEExportConfig.cmake  cmake_install.cmake
docs/: deepmind_fx.md  factory_fx_analysis.md  factory_fx_presets.md  fx_reference.md  sysex_format.md
docs/backlog/: backlog_phase2_jira_linear.csv  backlog_phase2_template.csv  calibration_lab_backlog_jira.csv
docs/patchwork-deepmind-main/: README.md  package-lock.json  package.json
docs/qa/: calibration-lab.md
exports/: CONTROL_FILESCODE_202607150823.txt  CONTROL_FILESCODE_202607170947.txt  project_metadata_202607150823.json  project_metadata_202607170947.json
scripts/: bundle_code_jsonl.ps1  validate_sysex_mapping.js
(+151 files in other folders)
